re-architecture started